--- a/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.html
+++ b/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.html
@@ -1,1 +1,19 @@
-<p>volume-calculation works!</p>
+<table mat-table [dataSource]="movementPatterns" class="mat-elevation-z3" matSort>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Movement Pattern</th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="primaryMuscleGroups">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Primary Muscle Groups</th>
+    <td mat-cell *matCellDef="let element">{{ element.primaryMuscleGroups | muscleGroup }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="secondaryMuscleGroups">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Secondary Muscle Groups</th>
+    <td mat-cell *matCellDef="let element">{{ element.secondaryMuscleGroups | muscleGroup }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
