--- a/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.scss
+++ b/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.scss
@@ -6,3 +6,25 @@
 table {
   width: 100%;
 }
+
+td, th {
+  width: 25%;
+}
+
+.mat-raised-button {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+.volume-button {
+  margin-left: 0.5rem;
+}
+
+.sets {
+  width: 10%;
+}
