No errors anymore

--- a/frontend/src/app/components/isolation-exercise-add-dialog/isolation-exercise-add-dialog.component.html
+++ b/frontend/src/app/components/isolation-exercise-add-dialog/isolation-exercise-add-dialog.component.html
@@ -3,21 +3,23 @@
     <span class="flex-1">Add Isolation Exercise</span>
   </div>
 </div>
-<mat-dialog-content>
-  <mat-form-field class="full-width">
-    <mat-label>Primary Muscle Group Trained</mat-label>
-    <mat-select *ngIf="muscleGroups">
-      <mat-option *ngFor="let muscleGroup of muscleGroups" [value]="muscleGroup">
-        {{[muscleGroup] | muscleGroup}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field class="full-width">
-    <mat-label>Sets</mat-label>
-    <input matInput type="number" min="0">
-  </mat-form-field>
+<mat-dialog-content *ngIf="formGroup">
+  <form [formGroup]="formGroup">
+    <mat-form-field class="full-width">
+      <mat-label>Primary Muscle Group Trained</mat-label>
+      <mat-select formControlName="primaryMuscleGroupTrained" *ngIf="muscleGroups">
+        <mat-option *ngFor="let muscleGroup of muscleGroups" [value]="muscleGroup">
+          {{[muscleGroup] | muscleGroup}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="full-width">
+      <mat-label>Sets</mat-label>
+      <input formControlName="sets" matInput type="number" min="0">
+    </mat-form-field>
+  </form>
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions *ngIf="formGroup">
   <button mat-button (click)="onAbort()">Cancel</button>
-  <button mat-button (click)="onSave()" color="primary">Add</button>
+  <button mat-button (click)="onSave()" color="primary" [disabled]="!formGroup.valid">Add</button>
 </mat-dialog-actions>
