--- a/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.html
+++ b/frontend/src/app/routes/home/volume-calculation/volume-calculation.component.html
@@ -4,24 +4,24 @@
 </mat-form-field>
 
 <div class="mat-elevation-z3">
-  <table mat-table [dataSource]="movementPatterns" matSort>
+  <table mat-table [dataSource]="movementPatterns">
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Movement Pattern</th>
+      <th mat-header-cell *matHeaderCellDef>Movement Pattern</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="primaryMuscleGroups">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Primary Muscle Groups</th>
+      <th mat-header-cell *matHeaderCellDef>Primary Muscle Groups</th>
       <td mat-cell *matCellDef="let element">{{ element.primaryMuscleGroups | muscleGroup }}</td>
     </ng-container>
 
     <ng-container matColumnDef="secondaryMuscleGroups">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Secondary Muscle Groups</th>
+      <th mat-header-cell *matHeaderCellDef>Secondary Muscle Groups</th>
       <td mat-cell *matCellDef="let element">{{ element.secondaryMuscleGroups | muscleGroup }}</td>
     </ng-container>
 
     <ng-container matColumnDef="amountOfSets">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sets</th>
+      <th mat-header-cell *matHeaderCellDef>Sets</th>
       <td mat-cell *matCellDef="let element">
         <mat-form-field class="sets">
           <input matInput type="number" min="0" [(ngModel)]="element.sets">
@@ -39,40 +39,34 @@
 <button mat-raised-button color="accent" (click)="onAddIsolationExercise()">
   Add Isolation Exercise
 </button>
-<button mat-raised-button class="volume-button" color="primary" (click)="onCalculateVolume()">
+<button mat-raised-button class="volume-button" color="primary" (click)="onCalculateVolume(); showVolumeTable()">
   Calculate Volume
 </button>
 
-<table *ngIf="muscleGroupsVolume" mat-table [dataSource]="muscleGroupsVolume" class="mat-elevation-z3" matSort>
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Muscle Group</th>
-    <td mat-cell *matCellDef="let element">{{ [element.name] | muscleGroup }}</td>
-  </ng-container>
+<div *ngIf="showTable">
+  <table mat-table [dataSource]="muscleGroupsVolume" class="mat-elevation-z3"
+         matSort matSortActive="sets" matSortDirection="desc">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Muscle Group</th>
+      <td mat-cell *matCellDef="let element">{{ [element.name] | muscleGroup }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="sets">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Sets</b></th>
-    <td mat-cell *matCellDef="let element"><b>{{ element.sets }}</b></td>
-  </ng-container>
+    <ng-container matColumnDef="sets">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Sets</b></th>
+      <td mat-cell *matCellDef="let element"><b>{{ element.sets }}</b></td>
+    </ng-container>
 
-  <ng-container matColumnDef="directWork">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Direct Work (primary)</th>
-    <td mat-cell *matCellDef="let element">{{ element.directWork }}</td>
-  </ng-container>
+    <ng-container matColumnDef="directWork">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Direct Work (primary)</th>
+      <td mat-cell *matCellDef="let element">{{ element.directWork }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="indirectWork">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Indirect Work (secondary)</th>
-    <td mat-cell *matCellDef="let element">{{ element.indirectWork }}</td>
-  </ng-container>
+    <ng-container matColumnDef="indirectWork">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Indirect Work (secondary)</th>
+      <td mat-cell *matCellDef="let element">{{ element.indirectWork }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsForMuscleGroupsVolume"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsForMuscleGroupsVolume"></tr>
-</table>
-
-<!-- <button mat-icon-button color="accent">
-  <mat-icon>add</mat-icon>
-</button>
-
-<button mat-icon-button color="accent">
-  <mat-icon>remove</mat-icon>
-</button>
--->
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsForMuscleGroupsVolume"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsForMuscleGroupsVolume"></tr>
+  </table>
+</div>
