--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
   <app-logo></app-logo>
-  <button mat-button color="primary" [routerLink]="['volume-calculation']">Volume Calculator</button>
+  <button mat-button color="primary" routerLinkActive="active" [routerLink]="['volume-calculation']">Volume Calculator</button>
+  <button mat-button color="primary" routerLinkActive="active" [routerLink]="['more-tools']">More Tools</button>
 </mat-toolbar>
