--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,2 +1,12 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<!-- see also https://stackoverflow.com/questions/90178/make-a-div-fill-the-height-of-the-remaining-screen-space -->
+<div class="box">
+  <div class="row header">
+    <app-header></app-header>
+  </div>
+  <div class="row content">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="row footer">
+    <app-footer></app-footer>
+  </div>
+</div>
