--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -6,3 +6,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.slogan {
+  font-weight: bold;
+  // margin-top: 10px;
+}
+
+.book {
+  font-style: italic;
+}
