--- a/frontend/src/app/components/logo/logo.component.html
+++ b/frontend/src/app/components/logo/logo.component.html
@@ -1,2 +1,2 @@
 <mat-icon svgIcon="logo" class="large"></mat-icon>
-<span>Training Program Building Tools</span>
+<span>Program Building Tools</span>
