--- a/frontend/src/app/routes/home/more-tools/more-tools.component.html
+++ b/frontend/src/app/routes/home/more-tools/more-tools.component.html
@@ -2,6 +2,6 @@
   <mat-card-title>More Tools</mat-card-title>
   <mat-card-content>
     <p>Got ideas for more tools or improvements?</p>
-    <p>Shoot me a message: <a href="mailto: programbuildingtools@gmail.com">programbuildingtools@gmail.com</a></p>
+    <p>Shoot me a message: <a href="mailto: chenmarvin97@gmail.com">chenmarvin97@gmail.com</a></p>
   </mat-card-content>
 </mat-card>
